[package]
name = "publisher"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
serde_json = "1.0.48"
serde = { version = "1.0.104", features = ["derive"] }
rust_log = {version = "0.3.1", git="https://github.com/StefanMallia/rust_log", branch="main"}


