[package]
name = "subscriber"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
zmq = "0.9"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.48"
serde = { version = "1.0.104", features = ["derive"] }
rust_log = {version = "0.3.1", git="https://github.com/StefanMallia/rust_log", branch="main"}
