[package]
name = "subscriber"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9"
serde_json = "1.0.48"
serde = { version = "1.0.104", features = ["derive"] }
rust_log = {version = "0.3.3", git="https://github.com/StefanMallia/rust_log", branch="main"}
