[package]
name = "subscriber_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
subscriber = { path = "../../subscriber/" }
config_loader = {version = "0.1.0", git="https://github.com/StefanMallia/config_loader", branch="main"}
chrono = "0.4.19"

